<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/small_gap"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_person_black_18dp"
        android:drawableLeft="@drawable/ic_person_black_18dp"
        android:drawablePadding="@dimen/small_gap"
        android:hint="@string/help_username" />


    <EditText
        android:id="@+id/et_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_gap"
        android:drawableStart="@drawable/ic_edit_black_18dp"
        android:drawableLeft="@drawable/ic_edit_black_18dp"
        android:drawablePadding="@dimen/small_gap"
        android:hint="@string/help_name" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_gap"
        android:drawableStart="@drawable/ic_email_black_18dp"
        android:drawableLeft="@drawable/ic_email_black_18dp"
        android:drawablePadding="@dimen/small_gap"
        android:hint="@string/help_e_mail" />

    <Button
        android:id="@+id/bt_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/small_gap"
        android:text="@string/action_save" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_personas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/medium_gap"
        android:layout_weight="1"></androidx.recyclerview.widget.RecyclerView>
</LinearLayout>