<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#14081D"
    app:cardCornerRadius="2dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:src="@drawable/john_wick" />

        <TextView
            android:id="@+id/tv_displayname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/small_gap"
            android:layout_marginTop="@dimen/small_gap"
            android:layout_toRightOf="@+id/avatar"
            android:text="@string/help_john_wick"
            android:textColor="#fff"
            android:textSize="@dimen/big_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_displayname"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/small_gap"
            android:layout_marginTop="@dimen/small_gap"
            android:layout_toRightOf="@+id/avatar"
            android:text="@string/help_username"
            android:textAllCaps="true"
            android:textColor="@color/icons_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_username"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/small_gap"
            android:layout_marginTop="@dimen/small_gap"
            android:layout_marginBottom="@dimen/medium_gap"
            android:layout_toRightOf="@+id/avatar"
            android:text="@string/help_e_mail"
            android:textColor="@color/icons_color"
            android:textStyle="bold" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>